--- a/package.json
+++ b/package.json
@@ -24,12 +24,16 @@
     "@radix-ui/react-radio-group": "^1.3.4",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.2.4",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.9",
     "@radix-ui/react-toast": "^1.2.11",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@types/canvas-confetti": "^1.9.0",
+    "@types/hls.js": "^1.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
@@ -52,6 +56,7 @@
     "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-h5-audio-player": "^3.10.0",
     "react-hook-form": "^7.56.1",
     "react-markdown": "^10.1.0",
@@ -64,15 +69,14 @@
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "toaster": "^0.1.2",
-    "video.js": "^8.15.1",
     "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/postcss": "^4",
-    "@types/fluent-ffmpeg": "^2.1.24",
     "@types/formidable": "^3.4.5",
+    "@types/hls.js": "^1.0.0",
     "@types/node": "^24.0.0",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
