--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "path": "^0.12.7",
+    "pusher": "^5.3.2",
+    "pusher-js": "^8.4.0",
     "qrcode": "^1.5.4",
     "razorpay": "^2.9.6",
     "react": "^19.1.1",
